// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders checkbox 1`] = `
<input
  className=""
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;

exports[`<Checkbox /> renders checkbox with all props defined 1`] = `
<input
  className="test-class"
  onChange={[Function]}
  style={
    Object {
      "margin": 0,
    }
  }
  type="checkbox"
/>
`;

exports[`<Checkbox /> renders checkbox with the right default props 1`] = `
<input
  className=""
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;
